// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API surface > exports of "." are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "AdminListingOptions",
  "AgentSwitch",
  "AgentSwitchesResponse",
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticErrorCode",
  "AgenticErrorCodeValue",
  "AgenticExternalToolResumeData",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticStreamError",
  "AgenticStreamErrorData",
  "AgenticStreamErrorReason",
  "AgenticUIMessage",
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "AttachmentUploadResult",
  "AuthContext",
  "AuthMode",
  "BBApiError",
  "BBCacheEntry",
  "BBCachedResource",
  "BBErrorDescription",
  "BBErrorKind",
  "BBHost",
  "BBHosts",
  "BBMessageKey",
  "BB_CACHE_DEFAULT",
  "BB_CACHE_POLICY",
  "BB_MESSAGE_KEYS",
  "Bot",
  "BotDetail",
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "CapabilitySwitch",
  "CapabilitySwitchesResponse",
  "ConnectIntegrationData",
  "ConnectIntegrationFrame",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "DEFAULTS",
  "DEFAULT_HOSTS",
  "DEFAULT_TIMEOUT_MS",
  "ExternalToolCall",
  "ExternalToolDef",
  "ExternalToolExecutor",
  "FormatterAdapter",
  "GetMessageListOptions",
  "INTEGRATIONS_API_PREFIX",
  "INTEGRATIONS_BASE_URL",
  "IdentityAdapter",
  "IntrospectResponse",
  "JsonValue",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "LoginOptions",
  "LoginResult",
  "MarkdownDocument",
  "MarkdownElement",
  "MarkdownFragment",
  "MarkdownNode",
  "MarkdownOptions",
  "MessageItem",
  "MessageKeyListIsComplete",
  "MessageListBody",
  "MessageStream",
  "MutationAckResponse",
  "NoteResult",
  "OAUTH_BACKEND_URL",
  "OAuthTokens",
  "Profile",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "Settings",
  "StorageAdapter",
  "StreamErrorFrame",
  "SuspendContext",
  "SuspendResult",
  "TOKEN_ENDPOINT",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "TextDeltaFrame",
  "Theme",
  "ThemeMode",
  "TokenResult",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "ToolCallTooLargeFrame",
  "ToolErrorEvent",
  "ToolInputAvailableFrame",
  "ToolOutputErrorFrame",
  "TransportConfig",
  "TransportMethod",
  "TransportRequest",
  "TransportResponse",
  "Transporter",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "UrlRewrite",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "agenticHeaders",
  "authHeaders",
  "autoApproveResolver",
  "beginBrowserLogin",
  "buildAgenticStreamUrl",
  "cachePolicyFor",
  "callAgenticStream",
  "captureError",
  "collectTextFromStream",
  "completeBrowserLogin",
  "computeExpiration",
  "createConversation",
  "createFetchTransport",
  "createIntlFormatter",
  "createLock",
  "createMessageStream",
  "createNote",
  "createRefreshGuard",
  "decodeJwtPayload",
  "deleteConversation",
  "denyAllResolver",
  "describeBBApiError",
  "discoverFrontendUrls",
  "exchangeCode",
  "extractCode",
  "extractJson",
  "extractOrgIdFromClaims",
  "extractOrgIdFromIntrospect",
  "extractProfile",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "flushAnalytics",
  "formatDate",
  "formatNumber",
  "formatRelativeTime",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "getAnalyticsAdapter",
  "getAuthContext",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getFormatter",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "hasUsableAuth",
  "identifyUser",
  "inferAuthMode",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isAgenticStreamError",
  "isBBApiError",
  "isConnectIntegrationFrame",
  "isRetryableBBError",
  "isRetryableStatus",
  "isStreamErrorFrame",
  "isTextDeltaFrame",
  "isTokenExpired",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "isToolCallTooLargeFrame",
  "isToolInputAvailableFrame",
  "isToolOutputErrorFrame",
  "listTenants",
  "login",
  "markdownToHtml",
  "nextThemeMode",
  "normalizeUrl",
  "parseAgenticStream",
  "parseSseDataLine",
  "refreshTokens",
  "renderMarkdown",
  "renderMarkdownInto",
  "repairUnescapedQuotes",
  "resetAnalyticsAdapter",
  "resetFormatterAdapter",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setAnalyticsAdapter",
  "setAnalyticsGroup",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "setFormatterAdapter",
  "subFromAccessToken",
  "timeAgo",
  "trackApiError",
  "trackEvent",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./adapters" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "CryptoAdapter",
  "FlagAdapter",
  "HostCapability",
  "HostCapabilityRegistry",
  "HostCapabilityResult",
  "IdentityAdapter",
  "StorageAdapter",
  "SyncStorageAdapter",
  "WebStorageArea",
  "createHostCapabilityRegistry",
  "createWebCryptoAdapter",
  "createWebStorageAdapter",
  "getCryptoAdapter",
  "getFeatureVariant",
  "getFlagAdapter",
  "isFeatureEnabled",
  "resetCryptoAdapter",
  "resetFlagAdapter",
  "routeToolCall",
  "setCryptoAdapter",
  "setFlagAdapter",
]
`;

exports[`public API surface > exports of "./adapters/office" are stable 1`] = `
[
  "OfficeAsyncResult",
  "OfficeDialog",
  "OfficeDialogEventArgs",
  "OfficeDialogOptions",
  "OfficeGlobal",
  "OfficeIdentityAdapterConfig",
  "createOfficeIdentityAdapter",
]
`;

exports[`public API surface > exports of "./agentic" are stable 1`] = `
[
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticErrorCode",
  "AgenticErrorCodeValue",
  "AgenticExternalToolResumeData",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticStreamError",
  "AgenticStreamErrorData",
  "AgenticStreamErrorReason",
  "AgenticUIMessage",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "ConnectIntegrationData",
  "ConnectIntegrationFrame",
  "ExternalToolCall",
  "ExternalToolDef",
  "ExternalToolExecutor",
  "JsonValue",
  "StreamErrorFrame",
  "SuspendContext",
  "SuspendResult",
  "TextDeltaFrame",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "ToolCallTooLargeFrame",
  "ToolErrorEvent",
  "ToolInputAvailableFrame",
  "ToolOutputErrorFrame",
  "agenticHeaders",
  "autoApproveResolver",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "collectTextFromStream",
  "denyAllResolver",
  "isAgenticStreamError",
  "isConnectIntegrationFrame",
  "isStreamErrorFrame",
  "isTextDeltaFrame",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "isToolCallTooLargeFrame",
  "isToolInputAvailableFrame",
  "isToolOutputErrorFrame",
  "parseAgenticStream",
  "parseSseDataLine",
]
`;

exports[`public API surface > exports of "./analytics" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "captureError",
  "flushAnalytics",
  "getAnalyticsAdapter",
  "identifyUser",
  "resetAnalyticsAdapter",
  "setAnalyticsAdapter",
  "setAnalyticsGroup",
  "trackApiError",
  "trackEvent",
]
`;

exports[`public API surface > exports of "./analytics/mixpanel" are stable 1`] = `
[
  "MixpanelAdapterConfig",
  "MixpanelClient",
  "MixpanelSuperProps",
  "createMixpanelAdapter",
]
`;

exports[`public API surface > exports of "./api" are stable 1`] = `
[
  "AdminListingOptions",
  "AgentSwitch",
  "AgentSwitchesResponse",
  "AgenticApprovalResumeData",
  "AgenticAskUserQuestionResumeData",
  "AgenticCallOptions",
  "AgenticErrorCode",
  "AgenticErrorCodeValue",
  "AgenticExternalToolResumeData",
  "AgenticHeaderOptions",
  "AgenticRequestBody",
  "AgenticResumeData",
  "AgenticSseFrame",
  "AgenticStreamError",
  "AgenticStreamErrorData",
  "AgenticStreamErrorReason",
  "AgenticUIMessage",
  "ApprovalContext",
  "ApprovalResolver",
  "ApprovalResult",
  "AttachmentUploadResult",
  "BBApiError",
  "BBErrorDescription",
  "BBErrorKind",
  "BBHost",
  "BBHosts",
  "Bot",
  "BotDetail",
  "CapabilitySwitch",
  "CapabilitySwitchesResponse",
  "ConnectIntegrationData",
  "ConnectIntegrationFrame",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "DEFAULT_HOSTS",
  "DEFAULT_TIMEOUT_MS",
  "ExternalToolCall",
  "ExternalToolDef",
  "ExternalToolExecutor",
  "GetMessageListOptions",
  "IntrospectResponse",
  "JsonValue",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "MessageItem",
  "MessageListBody",
  "MessageStream",
  "MutationAckResponse",
  "NoteResult",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "StreamErrorFrame",
  "SuspendContext",
  "SuspendResult",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "TextDeltaFrame",
  "ToolCallApprovalFrame",
  "ToolCallSuspendedFrame",
  "ToolCallTooLargeFrame",
  "ToolErrorEvent",
  "ToolInputAvailableFrame",
  "ToolOutputErrorFrame",
  "TransportConfig",
  "TransportMethod",
  "TransportRequest",
  "TransportResponse",
  "Transporter",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "UrlRewrite",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "agenticHeaders",
  "authHeaders",
  "autoApproveResolver",
  "buildAgenticStreamUrl",
  "callAgenticStream",
  "collectTextFromStream",
  "createConversation",
  "createFetchTransport",
  "createMessageStream",
  "createNote",
  "deleteConversation",
  "denyAllResolver",
  "describeBBApiError",
  "discoverFrontendUrls",
  "extractOrgIdFromIntrospect",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isAgenticStreamError",
  "isBBApiError",
  "isConnectIntegrationFrame",
  "isRetryableBBError",
  "isRetryableStatus",
  "isStreamErrorFrame",
  "isTextDeltaFrame",
  "isToolCallApprovalFrame",
  "isToolCallSuspendedFrame",
  "isToolCallTooLargeFrame",
  "isToolInputAvailableFrame",
  "isToolOutputErrorFrame",
  "listTenants",
  "normalizeUrl",
  "parseAgenticStream",
  "parseSseDataLine",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./auth" are stable 1`] = `
[
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "LoginOptions",
  "LoginResult",
  "Profile",
  "TokenResult",
  "beginBrowserLogin",
  "completeBrowserLogin",
  "computeExpiration",
  "createRefreshGuard",
  "decodeJwtPayload",
  "exchangeCode",
  "extractOrgIdFromClaims",
  "extractProfile",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "isTokenExpired",
  "login",
  "refreshTokens",
  "subFromAccessToken",
]
`;

exports[`public API surface > exports of "./config" are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "BBHost",
  "BBHosts",
  "DEFAULT_HOSTS",
  "INTEGRATIONS_API_PREFIX",
  "INTEGRATIONS_BASE_URL",
  "OAUTH_BACKEND_URL",
  "TOKEN_ENDPOINT",
]
`;

exports[`public API surface > exports of "./i18n" are stable 1`] = `
[
  "BBMessageKey",
  "BB_MESSAGE_KEYS",
  "FormatterAdapter",
  "MessageKeyListIsComplete",
  "createIntlFormatter",
  "formatDate",
  "formatNumber",
  "formatRelativeTime",
  "getFormatter",
  "resetFormatterAdapter",
  "setFormatterAdapter",
]
`;

exports[`public API surface > exports of "./react" are stable 1`] = `
[
  "BBClientProvider",
  "BBClientProviderProps",
  "BBKeys",
  "CreateBBQueryClientOptions",
  "UseChatStreamArgs",
  "UseChatStreamResult",
  "agentsQueryOptions",
  "bbKeys",
  "bbShouldRetryQuery",
  "botDetailQueryOptions",
  "botsQueryOptions",
  "capabilitiesQueryOptions",
  "conversationDetailQueryOptions",
  "createBBQueryClient",
  "messagesInfiniteOptions",
  "tenantConfigQueryOptions",
  "useAgents",
  "useBBContext",
  "useBotDetail",
  "useBots",
  "useCapabilities",
  "useChatStream",
  "useConversationAttachments",
  "useConversationDetail",
  "useConversationWebSearch",
  "useCreateConversation",
  "useCreateNote",
  "useDeleteConversation",
  "useMessages",
  "useSetAgentActive",
  "useSetAgentAvailability",
  "useSetCapabilityActive",
  "useSetCapabilityAvailability",
  "useSetCustomAgentsEnabled",
  "useTenantConfig",
  "useUpdateConversation",
  "useWebSearchProviders",
]
`;

exports[`public API surface > exports of "./settings" are stable 1`] = `
[
  "AuthContext",
  "AuthMode",
  "BBCacheEntry",
  "BBCachedResource",
  "BB_CACHE_DEFAULT",
  "BB_CACHE_POLICY",
  "DEFAULTS",
  "OAuthTokens",
  "Settings",
  "cachePolicyFor",
  "getAuthContext",
  "hasUsableAuth",
  "inferAuthMode",
]
`;

exports[`public API surface > exports of "./telemetry" are stable 1`] = `
[
  "AGENT_KINDS",
  "AgentKind",
  "BACKEND_ACTION_TYPES",
  "BLOCKED_ACTIONS",
  "BOT_KINDS",
  "BackendActionType",
  "BlockedAction",
  "BotKind",
  "CHAT_TOPICS",
  "CLIENT_ROUTES",
  "CONVERSATION_ENTRY_POINTS",
  "CORE_EVENT_NAMES",
  "ChatTopic",
  "ConsentGate",
  "ConsentSource",
  "ConsentState",
  "ConversationEntryPoint",
  "CoreEventMap",
  "CoreEventName",
  "CoreEventProps",
  "DENIED_PROPERTY_KEYS",
  "EMITTERS",
  "ERROR_SCOPES",
  "Emitter",
  "ErrorScope",
  "INPUT_MODES",
  "InputMode",
  "LEGACY_EVENT_RENAMES",
  "LEGACY_RENAME_TARGETS",
  "MESSAGE_FAILED_STAGES",
  "MIN_EVENT_SET",
  "MessageFailedStage",
  "OUTCOMES",
  "OWNER_PERMISSIONS",
  "Outcome",
  "OwnerPermission",
  "PROMPT_SOURCES",
  "PeopleProperties",
  "PromptSource",
  "RETIRED_EVENT_NAMES",
  "Route",
  "SIGN_IN_METHODS",
  "SIGN_IN_STAGES",
  "SIGN_OUT_CAUSES",
  "STREAM_DROP_REASONS",
  "SURFACES",
  "SignInMethod",
  "SignInStage",
  "SignOutCause",
  "SplitRename",
  "StreamDropReason",
  "SuperProperties",
  "Surface",
  "TAXONOMY_VERSION",
  "TELEMETRY_ENVS",
  "TOOL_KINDS",
  "TOPIC_TAXONOMY_VERSION",
  "TelemetryEnv",
  "ToolKind",
  "VOCABULARY_FINGERPRINT",
  "coerceChatTopic",
  "createConsentGate",
  "createStaticConsentSource",
  "createTogglableConsentSource",
  "stripDeniedProperties",
]
`;

exports[`public API surface > exports of "./telemetry/cookiebot" are stable 1`] = `
[
  "COOKIEBOT_EVENTS",
  "ConsentEventTarget",
  "CookiebotConsent",
  "CookiebotLike",
  "CookiebotSourceOptions",
  "createCookiebotConsentSource",
]
`;

exports[`public API surface > exports of "./text" are stable 1`] = `
[
  "extractCode",
  "extractJson",
  "repairUnescapedQuotes",
]
`;

exports[`public API surface > exports of "./ui" are stable 1`] = `
[
  "MarkdownDocument",
  "MarkdownElement",
  "MarkdownFragment",
  "MarkdownNode",
  "MarkdownOptions",
  "Theme",
  "ThemeMode",
  "markdownToHtml",
  "nextThemeMode",
  "renderMarkdown",
  "renderMarkdownInto",
  "timeAgo",
]
`;

exports[`public API surface > exports of "./ui/react" are stable 1`] = `
[
  "Theme",
  "ThemeMode",
  "useTheme",
]
`;

exports[`public API surface > exports of "./utils" are stable 1`] = `
[
  "createLock",
]
`;
